# blocksudoku-solver

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  blockfactory.cpp  blockfactory.h  blocksudoku.cpp  blocksudoku_test.cpp  bssolve_tests  bssolver  game.h  game_test.cpp  main.cpp  main_test.cpp  tests_bssolver  vcpkg.json
.github/workflows/: cmake-multi-platform.yml
include/: blocksudoku.h
src/: blockfactory.cpp  game.cpp  main.cpp
tests/: blockfactory_tests.cpp  blocksudoku_test.cpp
